2009-09-26  Glenn Morris  <rgm@gnu.org>

	* mail/rmailmm.el (rmail-mime-show-images, rmail-mime-bulk-handler):
	Add option to only show images below a certain size.
	(rmail-mime-multipart-handler): Remove unnecessary save-match-data and
	save-excursion calls.

2009-09-26  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (WINS_ALMOST): Add cedet (with its
	subdirectories) and eieio.

2009-09-26  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-beginning-of-statement-1):  Correct
	buggy bracketing.

	* progmodes/cc-langs.el (c-nonlabel-token-key): Allow quoted
	character constants (as case labels).

2009-09-25  Juri Linkov  <juri@jurta.org>

	* files.el (safe-local-eval-forms): Allow time-stamp in
	before-save-hook (Bug#4554).

2009-09-25  Drew Adams  <drew.adams@oracle.com>

	* menu-bar.el (list-buffers-directory): Doc fix.

2009-09-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* log-edit.el (log-edit-changelog-entries): Avoid inf-loops.
	Try and avoid copying twice the same paragraph.
	(log-edit-changelog-paragraph, log-edit-changelog-subparagraph):
	Remove save-excursion.
	(log-edit-changelog-entry): Do it here instead.

2009-09-25  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs--get-file-name): Use `list-buffers-directory'
	when available, instead of hardcoding mode names.  Doc fix.

	* menu-bar.el (list-buffers-directory): Add docstring.
	Make automatically buffer-local.

	* dired.el (dired-mode):
	* files.el (cd-absolute):
	* pcvs.el (cvs-temp-buffer):
	* pcvs-util.el (cvs-get-buffer-create):
	* shell.el (shell-mode):
	* vc-dir.el (vc-dir-mode):
	Don't make `list-buffers-directory' buffer local.

2009-09-25  Devon Sean McCullough  <emacs-hacker@Jovi.Net>

	* comint.el (comint-exec, comint-run, make-comint):
	Doc fixes (Bug#4542).

2009-09-25  Glenn Morris  <rgm@gnu.org>

	* mail/rmailmm.el (rmail-mime): New custom group.
	Move all defcustoms in this file into this group.
	(rmail-mime-media-type-handlers-alist): Revert previous change.